--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "mapbox-gl": "^2.15.0",
+    "mapbox-gl-vue": "^2.0.4",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "vue": "^3.2.13"
