--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@studiometa/vue-mapbox-gl": "^2.1.1",
     "autoprefixer": "^10.4.14",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
@@ -21,7 +23,8 @@
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "vue": "^3.2.13",
-    "vue-chartjs": "^5.2.0"
+    "vue-chartjs": "^5.2.0",
+    "vue3-mapbox": "^2.0.80"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
